# numrs

./: .gitignore  Cargo.toml  Cos_FT2.rs  README.md  links.md
src/: Carlson_elliptic_integral_first.rs  Carlson_elliptic_integral_second.rs  Carlson_elliptic_integral_third.rs  Carlson_elliptical_integral_degenerate.rs  Convolve.rs  Correlation.rs  Cos_FT.rs  Cosine_Sine_Integrals.rs  Elliptical_Legendre_First.rs  Elliptical_Legendre_Second.rs  FFT_1.rs  FFT_2.rs  Four_FS.rs  Fourn.rs  Jacobian_elliptical.rs  Real_FT.rs  Real_FT3.rs  Recursive_Stratified_Sampling.rs  \  airy.rs  banbks.rs  bandec.rs  bcucof.rs  bcuint.rs  beschd.rs  bessel_I1.rs  bessel_i.rs  bessel_j.rs  bessel_j1.rs  bessel_jy.rs  bessel_k.rs  bessel_k0.rs  bessel_k1.rs  bessel_y1.rs  bessel_yn.rs  bessik.rs  bessj0.rs  bessy0.rs  beta.rs  bico.rs  (+67 more)
tests/unit/: lu_decomp.rs  svd.rs
