[package]
name = "num_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "num_rs"
path = "src/lib.rs"

[dependencies]
rayon = "1.8"
approx = "0.5"
ndarray = "0.5"
once_cell = "1.10"
lru = "0.7"
num-complex = "0.4"
lazy_static = "1.4"
rand = "0.8"
rand_pcg = "0.3"
std-simd = "0.1"
memmap2 = "0.5"
tempfile = "3.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
